Update publishing args